--- a/style.css
+++ b/style.css
@@ -3,6 +3,17 @@
     padding: 0;
 }
 
+@media screen and (min-width: 300px) {
+    h1, h2, p, #contact-info {
+        font-family: papyrus, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
+
+    .project-tile, .contact {
+        font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-style: oblique;
+    }
+}
+
 #navbar {
     background-color: #83677b;
     color: wheat;
@@ -57,7 +68,6 @@ a.nav:hover, a.nav:focus, a.nav:active {
 
 .project-section-title {
     flex: 1;
-
 }
 
 .project-tile {
@@ -65,8 +75,6 @@ a.nav:hover, a.nav:focus, a.nav:active {
     flex: 1;
     margin: 50px;
     padding: 10px 0;
-    
-
 }
 
 a.project-tile {
@@ -74,7 +82,7 @@ a.project-tile {
     color: rgb(179, 179, 179);
 }
 
-#contact{
+#contact {
     background-color: #64485c;
     color: white;
     font-size: 1.5rem;
@@ -95,12 +103,12 @@ a.project-tile {
 }
 
 .contact {
-    flex: 1;
+    /* flex: 1; */
     margin: 1px;
     text-align: center;
 }
 
 a.contact {
     text-decoration: none;
-    color:whitesmoke;
+    color: whitesmoke;
 }
