--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
         font-family: papyrus, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
 
-    .project-tile, .contact {
+    .project-tile, .contact, #profile-link {
         font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         font-style: oblique;
     }
@@ -28,9 +28,10 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
+    overflow: auto;
     justify-content: center;
     align-items: center;
-    padding-top: 40px;
+    /* padding-top: 40px; */
 }
 
 h1 {
@@ -102,13 +103,13 @@ a.project-tile {
     justify-content: space-between;
 }
 
-.contact {
+.contact, #profile-link {
     /* flex: 1; */
     margin: 1px;
     text-align: center;
 }
 
-a.contact {
+a.contact , a#profile-link  {
     text-decoration: none;
     color: whitesmoke;
 }
